syntax = "proto3";
package family_tree;
import "proto/utils.proto";


// Family member information. Each node in the family tree will be stored as a FamilyMember
message FamilyMember {
  string id = 1;
  string name = 2;
  repeated string nicknames = 3;
  utils.GregorianDate date_of_birth = 4;
  utils.TraditionalDate traditional_date_of_birth = 5;
  optional bool alive = 6;
  utils.GregorianDate date_of_death = 7;
  utils.TraditionalDate traditional_date_of_death = 8;
  utils.Gender gender = 9;
  optional int64 birth_family_unit_id = 10;
  optional int64 marriage_family_unit_id = 11;
  optional utils.GregorianDate wedding_date = 12;
  map<string, string> additional_info = 13;
}

// Relationship (Edges) between family members
message Relationships {
  repeated string children_ids = 1;
  repeated string spouse_ids = 2;
  repeated string parent_ids = 3;
}

// Group that denotes a single household or the most granular family consisting of partners and children
message FamilyUnit {
  string id = 1;
  repeated int64 parent_ids = 2;
  repeated int64 child_ids = 3;
  string name = 4;
  map<string, string> additional_info = 5;
}

// Family Tree with all the members and relationships
message FamilyTree {
  map<string, FamilyMember> members = 1;
  map<string, Relationships> relationships = 2;
  repeated FamilyUnit family_units = 3;
}
