syntax = "proto3";
package utils;

message GregorianDate {
    int32 year = 1;
    int32 month = 2;
    int32 date = 3;
}

message TraditionalDate {
    TamilMonth month = 1;
    TamilStar star = 2;
    Paksham paksham = 3;
    Thithi thithi = 4;
}

//Enums are scoped for the entire file => They cannot have same "UNKNOWN" values across different enums
enum Paksham { 
    PAKSHAM_UNKNOWN = 0;
    KRISHNA = 1;
    SHUKLA = 2;
}

enum Thithi {
    THITHI_UNKNOWN = 0;
    PRATHAMAI = 1;
    DWITHIYAI = 2;    
    THRITHIYAI = 3;
    CHATHURTHI = 4;
    PANCHAMI = 5;
    SASHTI = 6;
    SAPTAMI = 7;
    ASHTAMI = 8;
    NAVAMI = 9;
    DASAMI = 10;
    EKADASI = 11;
    DWADASI = 12;
    THRAYODASI = 13;
    CHATHURDASI = 14;
    AMAVASYA = 15;
    POURNAMI = 16;
}

enum TamilMonth {
    TAMIL_MONTH_UNKNOWN = 0;
    CHITHIRAI = 1;
    VAIKASI = 2;
    AANI = 3;
    AADI = 4;
    AAVANI = 5;
    PURATTASI = 6;
    IYPASI = 7;
    KARTHIGAI = 8;
    MARGAZHI = 9;
    THAI = 10;
    MAASI = 11;
    PANGUNI = 12;
}

enum TamilStar {
    TAMIL_STAR_UNKNOWN = 0;
    ASHWINI = 1;
    BARANI = 2;
    KRITHIGAI = 3;
    ROHINI = 4;
    MIRUGASEERISHAM = 5;
    THIRUVATHIRAI = 6;
    PUNARPOOSAM = 7;
    POOSAM = 8;
    AAYILYAM = 9;
    MAGAM = 10;
    POORAM = 11;
    UTHIRAM = 12;
    HASTHAM = 13;
    // Changing the spelling to avoid enum conflicts with month from a single file scope
    CHITTHIRAI = 14;
    SWATHI = 15;
    VISAGAM = 16;
    ANUSHAM = 17;
    KETTAI = 18;
    MOOLAM = 19;
    POORADAM = 20;
    UTHIRADAM = 21;
    THIRUVONAM = 22;
    AVITTAM = 23;
    SATHAYAM = 24;
    POORATTADHI = 25;
    UTHIRATTADHI = 26;
    REVATHI = 27;
}

enum Gender {
    GENDER_UNKNOWN = 0;
    MALE = 1;
    FEMALE = 2;
    OTHER = 3;
}